# robot-espidf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3  sdkconfig.defaults.linux
data/: config.template.json
docs/: schema.drawio
main/: Beacon.cpp  Beacon.h  CMakeLists.txt  DCMotor.h  DistanceSensor.cpp  DistanceSensor.h  Gamepad.cpp  Gamepad.h  ServoMotor.cpp  ServoMotor.h  UserService.h  main.cpp
